Corrections to size, alignment, and colour of mobile menu icon

--- a/web/app/themes/estyn/resources/styles/app.scss
+++ b/web/app/themes/estyn/resources/styles/app.scss
@@ -1,11 +1,3 @@
-@import 'bootstrap/scss/bootstrap';
-@import 'common/fonts';
-
-/* Define a variable called estyn-blue with value #DCEEFE
-$estyn-blue: #DCEEFE;
-*/
-
-
 /** Main Colours **/
 $estyn-blue: #2A7AB0; /** Primary Estyn brand colour **/
 $estyn-green: #A2C83A; /** Secondary Estyn brand colour **/
@@ -18,13 +10,6 @@ $estyn-white: #FFFFFF;
 $border-radius-form: 4px;
 $border-radius-sm: 10px;
 $border-radius-lg: 29px;
-
-/** Override Bootstrap default border colour **/
-$border-color: $estyn-bluegrey;
-:root {
-    --bs-border-color: #AABCC8;
-}
-
 
 /** 
 
@@ -48,6 +33,8 @@ $esytn-signpost-verylightbrown: #F6D5C3;
 $esytn-signpost-green: #C4EDBB;
 $esytn-signpost-green2: #D9EAAB;
 
+/** Override Bootstrap default border colour **/
+$border-color: $estyn-bluegrey;
 
 /** Bootstrap form inputs overrides **/
 $input-font-family: "PT Sans", sans-serif;
@@ -57,6 +44,21 @@ $input-color: $estyn-darkblue;
 $input-border-color: $estyn-bluegrey;
 $input-border-radius: $border-radius-form;
 $input-border-width: 1px;
+
+/** Bootstrap nav overrides **/
+$navbar-light-color: $estyn-blue;
+$navbar-toggler-font-size: 0.85rem;
+$navbar-light-toggler-border-color: transparent;
+$navbar-light-toggler-icon-bg: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='30' height='30' viewBox='0 0 30 30'><path stroke='#{$estyn-blue}' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/></svg>");
+$navbar-toggler-padding-x: 0;
+
+@import 'bootstrap/scss/bootstrap';
+@import 'common/fonts';
+
+/* Define a variable called estyn-blue with value #DCEEFE
+$estyn-blue: #DCEEFE;
+*/
+
 
 /** Padding and margin (using Bootstrap stuff) **/
 $p-1: map-get($spacers, 1);
@@ -1339,6 +1341,7 @@ p.sp-desc {
 
     .navbar-brand img {
         width: 86px;
+        margin-top: 3px;
     }
 
     p, li, .reportMain p, .insideIntro p, .card.card-cta p, .reportMain li, blockquote {
